--- a/rbm.conf
+++ b/rbm.conf
@@ -9,6 +9,7 @@ pkg_type: build
 var:
   torbrowser_version: '6.5n'
   project_name: tor-browser
+  distribution_id: org.torproject
   multi_lingual: 0
   build_mar: 1
   # By default, we sort the list of installed packages. This allows sharing
